{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 87,
  "lineage": "95ec2c3e-e914-91e5-b6fe-eb505f52f530",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b21ccaeff8cd686",
            "arn": "arn:aws:ec2:us-east-1:773973263329:instance/i-091fa0551fac0857d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091fa0551fac0857d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066acb64814b8b3d9",
            "private_dns": "ip-10-0-0-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-039f3874c0ff5c89c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f307cc65881152d3",
            "tags": {
              "Environment": "dev",
              "Name": "Testing-Instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Testing-Instance"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "single-instance"
            },
            "vpc_security_group_ids": [
              "sg-0bd67c0d020ba77a1"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.ec2-instance.aws_iam_instance_profile.this",
            "module.ec2-instance.aws_iam_role.this",
            "module.ec2-instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance.data.aws_partition.current",
            "module.ec2-instance.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773973263329:network-acl/acl-0fdbdc8b57406a7f9",
            "default_network_acl_id": "acl-0fdbdc8b57406a7f9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fdbdc8b57406a7f9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "773973263329",
            "subnet_ids": [
              "subnet-0582bb6b21c970786",
              "subnet-0f307cc65881152d3"
            ],
            "tags": {
              "Name": "vpc-module"
            },
            "tags_all": {
              "Name": "vpc-module"
            },
            "vpc_id": "vpc-0715ce24183222991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773973263329:route-table/rtb-02ac64149e6f3fb73",
            "default_route_table_id": "rtb-02ac64149e6f3fb73",
            "id": "rtb-02ac64149e6f3fb73",
            "owner_id": "773973263329",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-module"
            },
            "tags_all": {
              "Name": "vpc-module"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0715ce24183222991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773973263329:security-group/sg-0bd67c0d020ba77a1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bd67c0d020ba77a1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "773973263329",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-module"
            },
            "tags_all": {
              "Name": "vpc-module"
            },
            "vpc_id": "vpc-0715ce24183222991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773973263329:internet-gateway/igw-04add55e94eec9687",
            "id": "igw-04add55e94eec9687",
            "owner_id": "773973263329",
            "tags": {
              "Name": "vpc-module"
            },
            "tags_all": {
              "Name": "vpc-module"
            },
            "vpc_id": "vpc-0715ce24183222991"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04add55e94eec9687",
            "id": "r-rtb-0fb62894c0e0f01b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fb62894c0e0f01b4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773973263329:route-table/rtb-04866859674705b52",
            "id": "rtb-04866859674705b52",
            "owner_id": "773973263329",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-module"
            },
            "tags_all": {
              "Name": "vpc-module"
            },
            "timeouts": null,
            "vpc_id": "vpc-0715ce24183222991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773973263329:route-table/rtb-0fb62894c0e0f01b4",
            "id": "rtb-0fb62894c0e0f01b4",
            "owner_id": "773973263329",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-module"
            },
            "tags_all": {
              "Name": "vpc-module"
            },
            "timeouts": null,
            "vpc_id": "vpc-0715ce24183222991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080642ce83241caad",
            "route_table_id": "rtb-04866859674705b52",
            "subnet_id": "subnet-0582bb6b21c970786"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00828c6e617bc9cf5",
            "route_table_id": "rtb-0fb62894c0e0f01b4",
            "subnet_id": "subnet-0f307cc65881152d3"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773973263329:subnet/subnet-0582bb6b21c970786",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0582bb6b21c970786",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773973263329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-module"
            },
            "tags_all": {
              "Name": "vpc-module"
            },
            "vpc_id": "vpc-0715ce24183222991"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773973263329:subnet/subnet-0f307cc65881152d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f307cc65881152d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773973263329",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-module"
            },
            "tags_all": {
              "Name": "vpc-module"
            },
            "vpc_id": "vpc-0715ce24183222991"
          },
          "dependencies": [
            "data.aws_availability_zones.name",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:773973263329:vpc/vpc-0715ce24183222991",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fdbdc8b57406a7f9",
            "default_route_table_id": "rtb-02ac64149e6f3fb73",
            "default_security_group_id": "sg-0bd67c0d020ba77a1",
            "dhcp_options_id": "dopt-0afacc672e8678520",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0715ce24183222991",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ac64149e6f3fb73",
            "owner_id": "773973263329",
            "tags": {
              "Name": "vpc-module"
            },
            "tags_all": {
              "Name": "vpc-module"
            }
          }
        }
      ]
    }
  ]
}